force-app/main/default/src/objects/Relay_Network__mdt/Relay_Network__mdt.object-meta.xml
<CustomObject>
    <label>Relay Network Setting</label>
    <pluralLabel>Relay Network Settings</pluralLabel>
</CustomObject>