force-app/main/default/src/objects/Relay_Network__mdt/fields/AccountConsentFieldName__c.field-meta.xml
<CustomField>
    <fullName>AccountConsentFieldName__c</fullName>
    <description>The Account field name that contains the Relay consent value</description>
    <label>Account Relay Consent Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>