force-app/main/default/src/objects/Relay_Network__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The API key used to access the Relay APIs</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>