force-app/main/default/src/objects/Relay_Network__mdt/fields/ExtFields__c.field-meta.xml
<CustomField>
    <fullName>ExtFields__c</fullName>
    <description>List the additional SalesForce fields to map to the Relay ext_ properties during an on-boarding call.</description>
    <label>Ext Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>