force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayApiUrl__c.field-meta.xml
<CustomField>
    <fullName>RelayApiUrl__c</fullName>
    <description>The Relay REST API endpoint URL. Relay has different endpoints for our Staging and Production environments</description>
    <label>Relay API URL</label>
    <type>Url</type>
</CustomField>