force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayCCIDFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelayCCIDFieldName__c</fullName>
    <description>The SF Field name that will contain the Relay CCID</description>
    <label>Relay CCID Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>