force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayConsentFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelayConsentFieldName__c</fullName>
    <description>The SF field name that contains the Relay consent value</description>
    <label>Relay Consent Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>