force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayDisableAccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>RelayDisableAccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all Account trigger logic from running</description>
    <inlineHelpText>If checked (disabled), all Relay Account trigger logic will be disabled.</inlineHelpText>
    <label>Disable</label>
    <type>Checkbox</type>
</CustomField>