force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayDisableEventConsentTrigger__c.field-meta.xml
<CustomField>
    <fullName>RelayDisableEventConsentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Relay Event Trigger from updating Accounts when a Consent change event is received</description>
    <inlineHelpText>If checked (disabled), this trigger will not update TCPA consent data on Account or Contact objects.</inlineHelpText>
    <label>Disable TCPA Consent Processing Logic</label>
    <type>Checkbox</type>
</CustomField>