force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayDisableTaskEventing__c.field-meta.xml
<CustomField>
    <fullName>RelayDisableTaskEventing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable events from being emitted when a call task is created.</description>
    <label>Disable</label>
    <type>Checkbox</type>
</CustomField>