force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayEventsAccountCCIDFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelayEventsAccountCCIDFieldName__c</fullName>
    <description>The filed name in the Account object that contains the Relay CCID</description>
    <inlineHelpText>The filed name in the Account object that contains the Relay CCID</inlineHelpText>
    <label>Account CCID Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>