force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayEventsContactCCIDFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelayEventsContactCCIDFieldName__c</fullName>
    <description>The field name in the Contact object that contains the Relay CCID.</description>
    <inlineHelpText>The field name in the Contact object that contains the Relay CCID. If the Conact object does not need to contain the Relay CCID, then this can be left blank</inlineHelpText>
    <label>Contact CCID Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>