force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayEventsDisableAccountLookup__c.field-meta.xml
<CustomField>
    <fullName>RelayEventsDisableAccountLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the lookup of the Account reference object</description>
    <label>Disable Account Ref Lookup</label>
    <type>Checkbox</type>
</CustomField>