force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayEventsDisableContactLookup__c.field-meta.xml
<CustomField>
    <fullName>RelayEventsDisableContactLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the lookup of the Contact reference object</description>
    <label>Disable Contact Ref Lookup</label>
    <type>Checkbox</type>
</CustomField>