force-app/main/default/src/objects/Relay_Network__mdt/fields/RelayMobilePhoneFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelayMobilePhoneFieldName__c</fullName>
    <description>The Account field name that contains the mobile phone number</description>
    <inlineHelpText>The filed name in the Account object that contains the mobile number. If left blank, it defaults to MobilePhone</inlineHelpText>
    <label>Account Mobile Phone Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>